Bug fix for overflow on ClimbingSession page

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -133,3 +133,7 @@ span.wall-sparkline {
 .user-home.heading {
   margin: 8px 0px;
 }
+
+li.climbing_session {
+  overflow: auto;
+}
